--- a/css/etchasketch.css
+++ b/css/etchasketch.css
@@ -3,7 +3,7 @@
   height:659px;
   margin:0;
   padding:0;
-  background-image: url("etchasketch.jpg");
+  background-image: url("../img/etchasketch.jpg");
   background-repeat: no-repeat;
   background-size: contain;
 }
